EK-137 fix for taxon overlapping

--- a/front-end/app/styles/_card-lg.scss
+++ b/front-end/app/styles/_card-lg.scss
@@ -266,6 +266,9 @@
 
 .card-header--flex-basis{
   flex-basis:auto;
+  display:inline-table;
 }
+
+
 
 
